Fixed collection spacing only showing user and not skipping spaces

--- a/app/assets/stylesheets/collections.scss
+++ b/app/assets/stylesheets/collections.scss
@@ -9,7 +9,7 @@
 }
 
 .container {
-    height: 800px;
+    height: 1200px;
     position: relative;
     border: 3px solid green;
     background-color: rgb(253, 251, 255);
